# JoopJoopBot

./: .dockerignore  .env.example  .gitignore  README.md  SETUP-GUIDE.md  docker-compose.yaml  pyproject.toml
docs/: DATA-COLLECTION.md
docs/architecture/: ARCHITECTURE.md  MODULE-DESIGN.md
docs/data-collection/: DART-DAG-OPS.md  DART-PIPELINE.md  HOW_TO_RUN_DAGS.md
docs/data-collection/test-guide/: 00-DART-TEST-GUIDE.md  01-CORE-TEST-GUIDE.md  02-AIRFLOW-TEST-GUIDE.md  03-FULL-TEST-GUIDE.md
scripts/postgres/: init-multiple-dbs.sh
services/airflow/: .dockerignore  Dockerfile  pytest.ini  requirements.txt
services/airflow/dags/: dart_common.py  fetch_dart_dag.py  fetch_dart_daily.py  fetch_dart_historical.py  fetch_dart_monthly.py  fetch_dart_weekly.py
services/airflow/tests/: conftest.py
services/airflow/tests/dags/: test_dart_daily.py  test_dart_monthly.py  test_dart_weekly.py
services/api/: Dockerfile  README.md  pyproject.toml
services/api/src/joopjoop_api/: main.py
services/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/backend/app/: main.py
services/backend/app/api/v1/: chat.py  dart.py
services/backend/app/core/: config.py
services/backend/app/services/chat/: rag_pipeline.py
services/frontend/: .dockerignore  Dockerfile  env.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
services/frontend/src/: App.vue  main.ts
services/web/: index.html  package-lock.json  package.json
services/web/src/: main.ts
services/web/src/views/: HomeView.vue
