[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "joopjoop"
version = "0.1.0"
description = "JoopJoop Project - 금융 데이터 분석 및 리포트 생성 플랫폼"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
package-mode = false